Fixes for inconsistent spacing on search results. This is for ticket MP-2967

--- a/ui.frontend/src/main/webpack/components/content/core-search-results/v1/search-results/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-search-results/v1/search-results/style.scss
@@ -231,7 +231,6 @@
 
     .coveo-results-header {
         box-shadow: none !important;
-        margin-bottom: 32px;
     }
 
     .error-required:before {
@@ -258,6 +257,10 @@
                 }
             }
         }
+    }
+
+    #search-result-filters .coveo-tab-section {
+        min-height: unset;
     }
     
 }
